--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+unbind C-b
+set -g prefix ^s
+new-session
 set-option default-shell /bin/zsh
 # start window indexing at one instead of zero
 set -g base-index 1
