--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,7 @@ bind -n M-tab next-window
 bind-key S command-prompt "new-window -dn %1 'ssh -x %1'"
 bind-key X command-prompt "new-window -dn %1 'ssh -X %1'"
 bind-key u command-prompt 'new-window -dn %1 "luakit %1"'
-bind-key J command-prompt "new-window -dn %1 'irssi  -c %1.jtvirc.com -p 6667 -w 902437457 -n gtmanfred'"
+bind-key J command-prompt "new-window -dn %1 'irssi --home=/home/daniel/.irssi/jtv -c %1.jtvirc.com -p 6667 -w 902437457 -n gtmanfred'"
 bind-key I new-window -dn irssi 'irssi'
 bind-key enter command-prompt "new-window -dn %1 '%%'"
 bind-key m new-window -n mutt mutt
