--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
-unbind C-b
-set -g prefix ^s
-new-session
+#unbind C-b
+set -g prefix ^a
+#new-session
 set-option default-shell /bin/zsh
 # start window indexing at one instead of zero
 set -g base-index 1
@@ -37,6 +37,7 @@ bind R source-file "$HOME/.tmux.conf" \; display-message "Configuration Reloaded
 #bind enter source-file "$HOME/test.sh"
 #bind R source-file "$HOME/.tmux/reload.tmux"
 bind -n M-tab next-window
+#bind -n "^[[24~" select-pane -t :.+
 bind-key S command-prompt "new-window -dn %1 'ssh -x %1'"
 bind-key X command-prompt "new-window -dn %1 'ssh -X %1'"
 bind-key u command-prompt 'new-window -dn %1 "luakit %1"'
