--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@ set -g set-titles on
 
 # wm window title string (uses statusbar variables)
 set -g set-titles-string "tmux.#I.#W ${PWD}"
-
+#set -g default-terminal "screen-256color" 
 bind b break-pane -d
 unbind %
 unbind '"'
@@ -27,8 +27,8 @@ setw -g monitor-activity on
 setw -g monitor-content ""
 set -g visual-content on
 set -g visual-activity off
-set-window-option -g window-status-alert-bg colour160
-set-window-option -g window-status-alert-fg black
+set-window-option -g window-status-activity-bg colour160
+set-window-option -g window-status-activity-fg black
 set-window-option -g status-right '#( sleep 10  && conky -i 1 -c ~/.conky_tmux)'
 set-window-option -g status-right-bg black
 set-window-option -g status-right-fg green
@@ -36,8 +36,8 @@ set-window-option -g status-right-length 100
 bind R source-file "$HOME/.tmux.conf" \; display-message "Configuration Reloaded."
 #bind enter source-file "$HOME/test.sh"
 #bind R source-file "$HOME/.tmux/reload.tmux"
-bind -n M-tab next-window
-#bind -n "^[[24~" select-pane -t :.+
+#bind -n M-tab next-window
+bind -n M-tab select-pane -t :.+
 bind-key S command-prompt "new-window -dn %1 'ssh -x %1'"
 bind-key X command-prompt "new-window -dn %1 'ssh -X %1'"
 bind-key u command-prompt 'new-window -dn %1 "luakit %1"'
@@ -45,4 +45,3 @@ bind-key J command-prompt "new-window -dn %1 'irssi  -c %1.jtvirc.com -p 6667 -w
 bind-key I new-window -dn irssi 'irssi'
 bind-key enter command-prompt "new-window -dn %1 '%%'"
 bind-key m new-window -n mutt mutt
-
