--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@ set -g set-titles on
 
 # wm window title string (uses statusbar variables)
 set -g set-titles-string "tmux.#I.#W ${PWD}"
-#set -g default-terminal "screen-256color" 
+set -g default-terminal "screen-256color" 
 bind b break-pane -d
 unbind %
 unbind '"'
@@ -38,6 +38,7 @@ bind R source-file "$HOME/.tmux.conf" \; display-message "Configuration Reloaded
 #bind R source-file "$HOME/.tmux/reload.tmux"
 #bind -n M-tab next-window
 bind -n M-tab select-pane -t :.+
+bind -n F12 select-pane -t :.-
 bind-key S command-prompt "new-window -dn %1 'ssh -x %1'"
 bind-key X command-prompt "new-window -dn %1 'ssh -X %1'"
 bind-key u command-prompt 'new-window -dn %1 "luakit %1"'
