updateing to 256 colors

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 unbind C-b
-set -g prefix ^a
+set -g prefix ^s
 set-option default-shell /bin/zsh
+set -g default-terminal "screen-256color" 
 # start window indexing at one instead of zero
 set -g base-index 1
 
@@ -26,8 +27,8 @@ setw -g monitor-activity on
 setw -g monitor-content ""
 set -g visual-content on
 set -g visual-activity off
-set-window-option -g window-status-alert-bg colour160
-set-window-option -g window-status-alert-fg black
+set-window-option -g window-status-activity-bg colour160
+set-window-option -g window-status-activity-fg black
 set-window-option -g status-right '#( sleep 10  && conky -i 1 -c .conkyrctmux)'
 set-window-option -g status-right-bg black
 set-window-option -g status-right-fg green
