--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@ set-option default-shell /bin/zsh
 set -g base-index 1
 
 # enable wm window titles
-set -g set-titles on
+set -g set-titles off
 
 # wm window title string (uses statusbar variables)
 set -g set-titles-string "tmux.#I.#W ${PWD}"
@@ -20,7 +20,7 @@ bind-key j command-prompt "join-pane -s %1 -h"
 set-option -g status-bg black
 set-option -g status-fg blue
 set-window-option -g window-status-current-bg black
-set-window-option -g window-status-current-fg green
+set-window-option -g window-status-current-fg brightgreen
 
 # Set window notifications
 setw -g monitor-activity on
@@ -29,11 +29,12 @@ set -g visual-content on
 set -g visual-activity off
 set-window-option -g window-status-activity-bg colour160
 set-window-option -g window-status-activity-fg black
-set-window-option -g status-right '#( sleep 10  && conky -i 1 -c ~/.conky_tmux)'
+set-window-option -g status-right '#( sleep 10  && conky -i 1 -c ~/.conky_tmux) #[fg=brightgreen]#H'
 set-window-option -g status-right-bg black
-set-window-option -g status-right-fg green
+set-window-option -g status-right-fg brightgreen
 set-window-option -g status-right-length 100
-bind R source-file "$HOME/.tmux.conf" \; display-message "Configuration Reloaded."
+bind R source-file "$HOME/.tmux.conf" \;
+	display-message "Configuration Reloaded."
 #bind enter source-file "$HOME/test.sh"
 #bind R source-file "$HOME/.tmux/reload.tmux"
 #bind -n M-tab next-window
@@ -46,3 +47,8 @@ bind-key J command-prompt "new-window -dn %1 'irssi  -c %1.jtvirc.com -p 6667 -w
 bind-key I new-window -dn irssi 'irssi'
 bind-key enter command-prompt "new-window -dn %1 '%%'"
 bind-key m new-window -n mutt mutt
+
+new -d -s0 -nirssi 'exec irssi'    
+neww  -d -nmail 'exec mutt'   
+neww -d -nsyslog 'exec tail -F -n 30 /var/log/everything.log'
+neww -d -nrtorrent 'exec rtorrent'   
