--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,7 @@ bind R source-file "$HOME/.tmux.conf" \;
 #bind R source-file "$HOME/.tmux/reload.tmux"
 #bind -n M-tab next-window
 bind -n M-tab select-pane -t :.+
-bind -n F12 select-pane -t :.-
+#bind -n F12 select-pane -t :.-
 bind-key S command-prompt "new-window -dn %1 'ssh -x %1'"
 bind-key X command-prompt "new-window -dn %1 'ssh -X %1'"
 bind-key u command-prompt 'new-window -dn %1 "luakit %1"'
@@ -48,7 +48,7 @@ bind-key I new-window -dn irssi 'irssi'
 bind-key enter command-prompt "new-window -dn %1 '%%'"
 bind-key m new-window -n mutt mutt
 
-new -d -s0 -nirssi 'exec irssi'    
+new -d -s0 -nirc 'exec weechat-curses'    
 neww  -d -nmail 'exec mutt'   
 neww -d -nsyslog 'exec tail -F -n 30 /var/log/everything.log'
-neww -d -nrtorrent 'exec rtorrent'   
+#neww -d -nrtorrent 'exec rtorrent'   
