patching my dwm

--- a/dwm/PKGBUILD
+++ b/dwm/PKGBUILD
@@ -15,11 +15,15 @@ depends=('libx11' 'libxinerama')
 install=dwm.install
 source=(http://dl.suckless.org/dwm/dwm-$pkgver.tar.gz
 	config.h
-	dwm.desktop)
-md5sums=('8bb00d4142259beb11e13473b81c0857'
-         'e6ffac1d389fc92d6fecaa2be223f382'
-         '939f403a71b6e85261d09fc3412269ee')
-
+	myconfigh.diff
+	dwm.desktop
+	dwm-6.0-cycle.diff
+	http://dwm.suckless.org/patches/dwm-6.0-push.diff
+	http://dwm.suckless.org/patches/dwm-6.0-bstack.diff
+	http://dwm.suckless.org/patches/dwm-6.0-pertag.diff
+	http://dwm.suckless.org/patches/dwm-6.0-zoomswap.diff
+	http://dwm.suckless.org/patches/dwm-r1508-focusonclick.diff
+	http://dwm.suckless.org/patches/dwm-5.9-warp.diff)
 build() {
   cd $srcdir/$pkgname-$pkgver
   cp $srcdir/config.h config.h
@@ -28,6 +32,13 @@ build() {
   sed -i 's/^#CFLAGS = -std/CFLAGS += -std/g' config.mk
   sed -i 's/^LDFLAGS = -g/#LDFLAGS += -g/g' config.mk
   sed -i 's/^#LDFLAGS = -s/LDFLAGS += -s/g' config.mk
+  patch -p1 -i $srcdir/dwm-6.0-cycle.diff
+  patch -p1 -i $srcdir/myconfigh.diff
+  patch -p1 -i $srcdir/dwm-6.0-pertag.diff
+  patch -p1 -i $srcdir/dwm-6.0-push.diff
+  patch -p1 -i $srcdir/dwm-6.0-bstack.diff
+  patch -p1 -i $srcdir/dwm-6.0-zoomswap.diff
+  patch -p1 -i $srcdir/dwm-5.9-warp.diff
   make X11INC=/usr/include/X11 X11LIB=/usr/lib/X11
 }
 
@@ -37,4 +48,26 @@ package() {
   install -m644 -D LICENSE $pkgdir/usr/share/licenses/$pkgname/LICENSE
   install -m644 -D README $pkgdir/usr/share/doc/$pkgname/README
   install -m644 -D $srcdir/dwm.desktop $pkgdir/usr/share/xsessions/dwm.desktop
-}
+ }
+md5sums=('8bb00d4142259beb11e13473b81c0857'
+         '2453e037f46449774ec8afab49b4f1a2'
+         '12c184c76e0ef0a6bae1a64ce76c50a9'
+         '939f403a71b6e85261d09fc3412269ee'
+         '15aa8505c9711db0b16db06b5395cedd'
+         '01a1c1099704fdfd55c1e30b51213ecb'
+         'b60183f343d3912e841d5cbda3de768f'
+         '0c92bac9c1b675d0a66e6a60b9ea8c60'
+         'a6bc146a14d9fd635c1fbd5afb40320d'
+         '3939dda9fb524e213dc7c9d08439aec1'
+         'ba990d311b640f43b883157588a28f1f')
+md5sums=('8bb00d4142259beb11e13473b81c0857'
+         '2453e037f46449774ec8afab49b4f1a2'
+         'c53c7610bcbe562cdcdcfb945342f09c'
+         '939f403a71b6e85261d09fc3412269ee'
+         '15aa8505c9711db0b16db06b5395cedd'
+         '01a1c1099704fdfd55c1e30b51213ecb'
+         'b60183f343d3912e841d5cbda3de768f'
+         '0c92bac9c1b675d0a66e6a60b9ea8c60'
+         'a6bc146a14d9fd635c1fbd5afb40320d'
+         '3939dda9fb524e213dc7c9d08439aec1'
+         'ba990d311b640f43b883157588a28f1f')
