--- a/dwm/PKGBUILD
+++ b/dwm/PKGBUILD
@@ -48,6 +48,8 @@ package() {
   install -m644 -D LICENSE $pkgdir/usr/share/licenses/$pkgname/LICENSE
   install -m644 -D README $pkgdir/usr/share/doc/$pkgname/README
   install -m644 -D $srcdir/$pkgname.desktop $pkgdir/usr/share/xsessions/$pkgname.desktop
+  cp $srcdir/$pkgname-$pkgver/config.h $srcdir/../
+  cp $srcdir/$pkgname-$pkgver/dwm.c $srcdir/../
  }
 md5sums=('8bb00d4142259beb11e13473b81c0857'
          '2453e037f46449774ec8afab49b4f1a2'
