--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,12 @@ set -g base-index 1
 
 # enable wm window titles
 set -g set-titles off
+setw -g mode-keys vi
+bind y paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'u' copy-selection
 
+#setw -g aggressive-resize on
 # wm window title string (uses statusbar variables)
 set -g set-titles-string "tmux.#I.#W ${PWD}"
 set -g default-terminal "screen-256color" 
@@ -34,7 +39,7 @@ set-window-option -g status-right-bg black
 set-window-option -g status-right-fg brightgreen
 set-window-option -g status-right-length 100
 bind R source-file "$HOME/.tmux.conf" \;
-	display-message "Configuration Reloaded."
+display-message "Configuration Reloaded."
 #bind enter source-file "$HOME/test.sh"
 #bind R source-file "$HOME/.tmux/reload.tmux"
 #bind -n M-tab next-window
@@ -42,13 +47,16 @@ bind -n M-tab select-pane -t :.+
 #bind -n F12 select-pane -t :.-
 bind-key S command-prompt "new-window -dn %1 'ssh -x %1'"
 bind-key X command-prompt "new-window -dn %1 'ssh -X %1'"
-bind-key u command-prompt 'new-window -dn %1 "luakit %1"'
 bind-key J command-prompt "new-window -dn %1 'irssi  -c %1.jtvirc.com -p 6667 -w 902437457 -n gtmanfred'"
 bind-key I new-window -dn irssi 'irssi'
 bind-key enter command-prompt "new-window -dn %1 '%%'"
 bind-key m new-window -n mutt mutt
 
 new -d -s0 -nirc 'exec weechat-curses'    
-neww  -d -nmail 'exec mutt'   
+split-window -h -p50 -t1
+neww  -d -nmail 'exec mutt'
+neww  -d -nrss 'exec newsbeuter'
+join-pane -h -p50 -s3 -t2
 neww -d -nsyslog 'exec tail -F -n 30 /var/log/everything.log'
+select-window -t1
 #neww -d -nrtorrent 'exec rtorrent'   
