added setnmaster to config.h and PKGBUILD

--- a/dwm/PKGBUILD
+++ b/dwm/PKGBUILD
@@ -18,6 +18,7 @@ source=(http://dl.suckless.org/dwm/dwm-$pkgver.tar.gz
 	myconfigh.diff
 	dwm.desktop
 	dwm-6.0-cycle.diff
+	setnmaster-patch.diff
 	http://dwm.suckless.org/patches/dwm-6.0-push.diff
 	http://dwm.suckless.org/patches/dwm-6.0-bstack.diff
 	http://dwm.suckless.org/patches/dwm-6.0-pertag.diff
@@ -41,6 +42,7 @@ build() {
   patch -p1 -i $srcdir/dwm-6.0-bstack.diff
   patch -p1 -i $srcdir/dwm-6.0-attachabove.diff
   patch -p1 -i $srcdir/dwm-5.7.2-attachaside.diff
+  patch -p1 -i $srcdir/setnmaster-patch.diff
   #patch -p1 -i $srcdir/dwm-6.0-zoomswap.diff
   #patch -p1 -i $srcdir/dwm-5.9-warp.diff
   sed -i 's/\[EnterNotify/\/\/\[EnterNotify/' $srcdir/$pkgname-$pkgver/$pkgname.c
@@ -62,6 +64,7 @@ md5sums=('8bb00d4142259beb11e13473b81c0857'
          '65087fe6e9d1bad619adbc81402fec6a'
          '939f403a71b6e85261d09fc3412269ee'
          '1ee974bdb3fc8369accbd5d44ecfb513'
+         'b20bbe4c55df8a2d3981dce463e83b48'
          '01a1c1099704fdfd55c1e30b51213ecb'
          'b60183f343d3912e841d5cbda3de768f'
          '0c92bac9c1b675d0a66e6a60b9ea8c60'
