--- a/dwm/PKGBUILD
+++ b/dwm/PKGBUILD
@@ -25,6 +25,7 @@ source=(http://dl.suckless.org/dwm/dwm-$pkgver.tar.gz
 	http://dwm.suckless.org/patches/dwm-6.0-zoomswap.diff
 	http://dwm.suckless.org/patches/dwm-r1508-focusonclick.diff
 	http://dwm.suckless.org/patches/dwm-5.9-warp.diff
+	http://dwm.suckless.org/patches/flextile-5.8.2.diff
 	http://dwm.suckless.org/patches/dwm-6.0-attachabove.diff
 	http://dwm.suckless.org/patches/dwm-5.7.2-attachaside.diff)
 build() {
@@ -37,11 +38,12 @@ build() {
   sed -i 's/^#LDFLAGS = -s/LDFLAGS += -s/g' config.mk
   #patch -p1 -i $srcdir/dwm-6.0-cycle.diff
   #patch -p1 -i $srcdir/myconfigh.diff
+  #patch -p1 -i $srcdir/flextile-5.8.2.diff
   patch -p1 -i $srcdir/dwm-6.0-pertag.diff
   patch -p1 -i $srcdir/dwm-6.0-push.diff
   patch -p1 -i $srcdir/dwm-6.0-bstack.diff
-  patch -p1 -i $srcdir/dwm-6.0-attachabove.diff
-  #patch -p1 -i $srcdir/dwm-5.7.2-attachaside.diff
+  #patch -p1 -i $srcdir/dwm-6.0-attachabove.diff
+  patch -p1 -i $srcdir/dwm-5.7.2-attachaside.diff
   #patch -p1 -i $srcdir/setnmaster-patch.diff
   #patch -p1 -i $srcdir/dwm-6.0-zoomswap.diff
   #patch -p1 -i $srcdir/dwm-5.9-warp.diff
@@ -61,7 +63,7 @@ package() {
   cp $srcdir/$pkgname-$pkgver/dwm.c $srcdir/../
  }
 md5sums=('8bb00d4142259beb11e13473b81c0857'
-         '33cb66dd407cb40681ec88ba941dd48d'
+         '85ea1132adcfbc2b662d13eece7c87bf'
          '65087fe6e9d1bad619adbc81402fec6a'
          '939f403a71b6e85261d09fc3412269ee'
          '1ee974bdb3fc8369accbd5d44ecfb513'
@@ -72,5 +74,21 @@ md5sums=('8bb00d4142259beb11e13473b81c0857'
          'a6bc146a14d9fd635c1fbd5afb40320d'
          '3939dda9fb524e213dc7c9d08439aec1'
          'ba990d311b640f43b883157588a28f1f'
+         '2e01dd3aac5fdc5c0c0a0b92b1f09045'
          '096a8cb6566014164a498658c1721c40'
-         '47a3173776bfc913221834baec743367')
+         'a92ee04c33b1082da61b55d3617249eb')
+md5sums=('8bb00d4142259beb11e13473b81c0857'
+         '44d6d99e89015ef7e5e9e0b92fb65f39'
+         '65087fe6e9d1bad619adbc81402fec6a'
+         '939f403a71b6e85261d09fc3412269ee'
+         '1ee974bdb3fc8369accbd5d44ecfb513'
+         'e95c6a144efcaf73066599e00613dd79'
+         '01a1c1099704fdfd55c1e30b51213ecb'
+         'b60183f343d3912e841d5cbda3de768f'
+         '0c92bac9c1b675d0a66e6a60b9ea8c60'
+         'a6bc146a14d9fd635c1fbd5afb40320d'
+         '3939dda9fb524e213dc7c9d08439aec1'
+         'ba990d311b640f43b883157588a28f1f'
+         '2e01dd3aac5fdc5c0c0a0b92b1f09045'
+         '096a8cb6566014164a498658c1721c40'
+         'a92ee04c33b1082da61b55d3617249eb')
