this is just a standard of date for things I have changed

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ set -g base-index 1
 set -g set-titles off
 setw -g mode-keys vi
 bind y paste-buffer
-bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'C-u' begin-selection
 bind-key -t vi-copy 'u' copy-selection
 
 #setw -g aggressive-resize on
@@ -42,7 +42,7 @@ bind R source-file "$HOME/.tmux.conf" \;
 display-message "Configuration Reloaded."
 #bind enter source-file "$HOME/test.sh"
 #bind R source-file "$HOME/.tmux/reload.tmux"
-#bind -n M-tab next-window
+bind -n F13 next-window
 bind -n M-tab select-pane -t :.+
 #bind -n F12 select-pane -t :.-
 bind-key S command-prompt "new-window -dn %1 'ssh -x %1'"
