--- a/dwm/PKGBUILD
+++ b/dwm/PKGBUILD
@@ -19,6 +19,7 @@ source=(http://dl.suckless.org/dwm/dwm-$pkgver.tar.gz
 	dwm.desktop
 	dwm-6.0-cycle.diff
 	setnmaster-patch.diff
+	dwm-6.0-centred-floating.diff
 	http://dwm.suckless.org/patches/dwm-6.0-push.diff
 	http://dwm.suckless.org/patches/dwm-6.0-bstack.diff
 	http://dwm.suckless.org/patches/dwm-6.0-pertag.diff
@@ -44,6 +45,7 @@ build() {
   patch -p1 -i $srcdir/dwm-6.0-bstack.diff
   #patch -p1 -i $srcdir/dwm-6.0-attachabove.diff
   patch -p1 -i $srcdir/dwm-5.7.2-attachaside.diff
+  patch -p1 -i $srcdir/dwm-6.0-centred-floating.diff
   #patch -p1 -i $srcdir/setnmaster-patch.diff
   #patch -p1 -i $srcdir/dwm-6.0-zoomswap.diff
   #patch -p1 -i $srcdir/dwm-5.9-warp.diff
@@ -63,26 +65,12 @@ package() {
   cp $srcdir/$pkgname-$pkgver/dwm.c $srcdir/../
  }
 md5sums=('8bb00d4142259beb11e13473b81c0857'
-         '3267743d51cfa8b2dca0afab6409e6e7'
-         '65087fe6e9d1bad619adbc81402fec6a'
-         '939f403a71b6e85261d09fc3412269ee'
-         '1ee974bdb3fc8369accbd5d44ecfb513'
-         'e95c6a144efcaf73066599e00613dd79'
-         '01a1c1099704fdfd55c1e30b51213ecb'
-         'b60183f343d3912e841d5cbda3de768f'
-         '0c92bac9c1b675d0a66e6a60b9ea8c60'
-         'a6bc146a14d9fd635c1fbd5afb40320d'
-         '3939dda9fb524e213dc7c9d08439aec1'
-         'ba990d311b640f43b883157588a28f1f'
-         '2e01dd3aac5fdc5c0c0a0b92b1f09045'
-         '096a8cb6566014164a498658c1721c40'
-         'a92ee04c33b1082da61b55d3617249eb')
-md5sums=('8bb00d4142259beb11e13473b81c0857'
          '3492363f9c90f66f4fa99feb50ce64d7'
          '65087fe6e9d1bad619adbc81402fec6a'
          '939f403a71b6e85261d09fc3412269ee'
          '1ee974bdb3fc8369accbd5d44ecfb513'
          'e95c6a144efcaf73066599e00613dd79'
+         '7580f5acd223c9c5e61e13a7b43cb095'
          '01a1c1099704fdfd55c1e30b51213ecb'
          'b60183f343d3912e841d5cbda3de768f'
          '0c92bac9c1b675d0a66e6a60b9ea8c60'
