--- a/dwm/PKGBUILD
+++ b/dwm/PKGBUILD
@@ -20,6 +20,7 @@ source=(http://dl.suckless.org/dwm/dwm-$pkgver.tar.gz
 	dwm-6.0-cycle.diff
 	setnmaster-patch.diff
 	dwm-6.0-centred-floating.diff
+	http://hg.punctweb.ro/dwm/raw/fa5e3da6ac4c/10-dwm-6.0-scratchpad.diff
 	http://dwm.suckless.org/patches/dwm-6.0-push.diff
 	http://dwm.suckless.org/patches/dwm-6.0-bstack.diff
 	http://dwm.suckless.org/patches/dwm-6.0-pertag.diff
@@ -46,6 +47,7 @@ build() {
   #patch -p1 -i $srcdir/dwm-6.0-attachabove.diff
   patch -p1 -i $srcdir/dwm-5.7.2-attachaside.diff
   patch -p1 -i $srcdir/dwm-6.0-centred-floating.diff
+  patch -p1 -i $srcdir/10-dwm-6.0-scratchpad.diff
   #patch -p1 -i $srcdir/setnmaster-patch.diff
   #patch -p1 -i $srcdir/dwm-6.0-zoomswap.diff
   #patch -p1 -i $srcdir/dwm-5.9-warp.diff
@@ -71,6 +73,7 @@ md5sums=('8bb00d4142259beb11e13473b81c0857'
          '1ee974bdb3fc8369accbd5d44ecfb513'
          'e95c6a144efcaf73066599e00613dd79'
          '7580f5acd223c9c5e61e13a7b43cb095'
+         'c28683c8c725aa7849c21224787c38cd'
          '01a1c1099704fdfd55c1e30b51213ecb'
          'b60183f343d3912e841d5cbda3de768f'
          '0c92bac9c1b675d0a66e6a60b9ea8c60'
