considering switching to console on netbook

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 unbind C-b
-set -g prefix ^s
+set -g prefix ^a
 set-option default-shell /bin/zsh
 set -g default-terminal "screen-256color" 
 # start window indexing at one instead of zero
@@ -36,7 +36,8 @@ set-window-option -g status-right-length 100
 bind R source-file "$HOME/.tmux.conf" \; display-message "Configuration Reloaded."
 #bind enter source-file "$HOME/test.sh"
 #bind R source-file "$HOME/.tmux/reload.tmux"
-bind -n M-tab next-window
+bind -n F13 next-window
+bind -n M-tab select-pane -t :.+ 
 bind-key S command-prompt "new-window -dn %1 'ssh -x %1'"
 bind-key X command-prompt "new-window -dn %1 'ssh -X %1'"
 bind-key u command-prompt 'new-window -dn %1 "luakit %1"'
