--- a/tmux.conf
+++ b/tmux.conf
@@ -53,10 +53,10 @@ bind-key enter command-prompt "new-window -dn %1 '%%'"
 bind-key m new-window -n mutt mutt
 
 new -d -s0 -nirc 'exec weechat-curses'    
-split-window -h -p50 -t1
+split-window -v -p25 -t1
 neww  -d -nmail 'exec mutt'
 neww  -d -nrss 'exec newsbeuter'
-join-pane -h -p50 -s3 -t2
-neww -d -nsyslog 'exec tail -F -n 30 /var/log/everything.log'
+#join-pane -h -p50 -s3 -t2
+#neww -d -nsyslog 'exec tail -F -n 30 /var/log/everything.log'
+neww -d -nrtorrent 'exec rtorrent'   
 select-window -t1
-#neww -d -nrtorrent 'exec rtorrent'   
