--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 #unbind C-b
-set -g prefix ^a
+set -g prefix ^b
 #new-session
 set-option default-shell /bin/zsh
 # start window indexing at one instead of zero
@@ -51,12 +51,3 @@ bind-key J command-prompt "new-window -dn %1 'irssi  -c %1.jtvirc.com -p 6667 -w
 bind-key I new-window -dn irssi 'irssi'
 bind-key enter command-prompt "new-window -dn %1 '%%'"
 bind-key m new-window -n mutt mutt
-
-new -d -s0 -nirc 'exec weechat-curses'    
-split-window -v -p25 -t1 
-neww  -d -nmail 'exec mutt'
-neww  -d -nrss 'exec newsbeuter'
-#join-pane -h -p50 -s3 -t2
-#neww -d -nsyslog 'exec tail -F -n 30 /var/log/everything.log'
-neww -d -nrtorrent 'exec rtorrent'   
-select-window -t1
