RPROMPT only in tty not in pts

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,7 +29,7 @@ set -g visual-content on
 set -g visual-activity off
 set-window-option -g window-status-activity-bg colour160
 set-window-option -g window-status-activity-fg black
-set-window-option -g status-right '#( sleep 10  && conky -i 1 -c .conkyrctmux)'
+set-window-option -g status-right '#( sleep 10  && conky -i 1 -c ~/.conkyrctmux)'
 set-window-option -g status-right-bg black
 set-window-option -g status-right-fg green
 set-window-option -g status-right-length 100
