urlLaunch script is fantastic plus other stuff
just an update to back up my new urllauncher script it is really awesome
Signed-off-by: Daniel Wallace <daniel.wallace@gatech.edu>

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,7 +34,8 @@ set -g visual-content on
 set -g visual-activity off
 set-window-option -g window-status-activity-bg colour160
 set-window-option -g window-status-activity-fg black
-set-window-option -g status-right '#( sleep 10  && conky -i 1 -c ~/.conky_tmux) #[fg=brightgreen]#H'
+set-window-option -g status-right '#(conky -i 1 -c ~/.conky_tmux) #[fg=brightgreen]#H'
+set-window-option -g status-interval 1
 set-window-option -g status-right-bg black
 set-window-option -g status-right-fg brightgreen
 set-window-option -g status-right-length 100
