--- a/tmux.conf
+++ b/tmux.conf
@@ -46,11 +46,6 @@ display-message "Configuration Reloaded."
 bind -n F13 next-window
 bind -n M-tab select-pane -t :.+
 #bind -n F12 select-pane -t :.-
-bind-key S command-prompt "new-window -dn %1 'ssh -x %1'"
-bind-key X command-prompt "new-window -dn %1 'ssh -X %1'"
-bind-key J command-prompt "new-window -dn %1 'irssi  -c %1.jtvirc.com -p 6667 -w 902437457 -n gtmanfred'"
-bind-key I new-window -dn irssi 'irssi'
-bind-key enter command-prompt "new-window -dn %1 '%%'"
 bind-key m new-window -n mutt mutt
 
 new -d -s0 -nirc 'exec weechat-curses'    
@@ -61,3 +56,5 @@ neww  -d -nrss 'exec newsbeuter'
 #neww -d -nsyslog 'exec tail -F -n 30 /var/log/everything.log'
 neww -d -nrtorrent 'exec rtorrent'   
 select-window -t1
+#bind-key -n M-u capture-pane \; save-buffer /tmp/tmux-buffer \; run-shell "termite urlview /tmp/tmux-buffer"
+#bind-key -n M-u capture-pane \; save-buffer /tmp/tmux-buffer \; new-window -n"urlview" "zsh -c 'BROWSER=/home/daniel/.scripts/zurl urlscan < /tmp/tmux-buffer'"
