Updating dot files because brotatos wants to see my new mutt stuff

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,6 +26,7 @@ set-option -g status-bg black
 set-option -g status-fg blue
 set-window-option -g window-status-current-bg black
 set-window-option -g window-status-current-fg brightgreen
+setw -g aggressive-resize on
 
 # Set window notifications
 setw -g monitor-activity on
