trying to clean up netbook

--- a/tmux.conf
+++ b/tmux.conf
@@ -38,11 +38,7 @@ bind R source-file "$HOME/.tmux.conf" \; display-message "Configuration Reloaded
 #bind R source-file "$HOME/.tmux/reload.tmux"
 bind -n F13 next-window
 bind -n M-tab select-pane -t :.+ 
-bind-key S command-prompt "new-window -dn %1 'ssh -x %1'"
-bind-key X command-prompt "new-window -dn %1 'ssh -X %1'"
-bind-key u command-prompt 'new-window -dn %1 "luakit %1"'
-bind-key J command-prompt "new-window -dn %1 'irssi --home=/home/daniel/.irssi/jtv -c %1.jtvirc.com -p 6667 -w 902437457 -n gtmanfred'"
-bind-key I new-window -dn irssi 'irssi'
-bind-key enter command-prompt "new-window -dn %1 '%%'"
-bind-key m new-window -n mutt mutt
+#bind-key -n M-u capture-pane \; save-buffer /tmp/tmux-buffer \; run-shell "termite urlview /tmp/tmux-buffer"
+#bind-key -n M-u capture-pane -S1000\; save-buffer /tmp/tmux-buffer \; new-window -n"urlview" 'zsh -c "urlview < /tmp/tmux-buffer"'
+#bind-key -n M-u capturep \; saveb /tmp/tmux-buffer \; neww -n urlview "zsh -c 'BROWSER=/home/daniel/.scripts/zurl urlview  </tmp/tmux-buffer'" \;
 
