--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 #unbind C-b
 set -g prefix ^a
+bind-key a send-prefix
 #new-session
 set-option default-shell /bin/zsh
 # start window indexing at one instead of zero
@@ -16,6 +17,8 @@ bind-key -t vi-copy 'u' copy-selection
 # wm window title string (uses statusbar variables)
 set -g set-titles-string "tmux.#I.#W ${PWD}"
 set -g default-terminal "screen-256color" 
+set -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
+
 bind b break-pane -d
 unbind %
 unbind '"'
