--- a/tmux.conf
+++ b/tmux.conf
@@ -52,13 +52,8 @@ bind -n M-tab select-pane -t :.+
 #bind -n F12 select-pane -t :.-
 bind-key m new-window -n mutt mutt
 
-new -d -s0 -nirc 'exec weechat-curses'    
-#split-window -v -p25 -t1 
+new -d -s0 -nzsh 'exec zsh'
 neww  -d -nmail 'exec mutt'
 neww  -d -nrss 'exec newsbeuter'
-join-pane -h -p50 -s3 -t2
-#neww -d -nsyslog 'exec tail -F -n 30 /var/log/everything.log'
 neww -d -nrtorrent 'exec rtorrent'   
 select-window -t1
-#bind-key -n M-u capture-pane \; save-buffer /tmp/tmux-buffer \; run-shell "termite urlview /tmp/tmux-buffer"
-#bind-key -n M-u capture-pane \; save-buffer /tmp/tmux-buffer \; new-window -n"urlview" "zsh -c 'BROWSER=/home/daniel/.scripts/zurl urlscan < /tmp/tmux-buffer'"
