need to updated... it has been 7 months

--- a/tmux.conf
+++ b/tmux.conf
@@ -38,6 +38,7 @@ bind R source-file "$HOME/.tmux.conf" \; display-message "Configuration Reloaded
 #bind R source-file "$HOME/.tmux/reload.tmux"
 bind -n F13 next-window
 bind -n M-tab select-pane -t :.+ 
+set -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
 #bind-key -n M-u capture-pane \; save-buffer /tmp/tmux-buffer \; run-shell "termite urlview /tmp/tmux-buffer"
 #bind-key -n M-u capture-pane -S1000\; save-buffer /tmp/tmux-buffer \; new-window -n"urlview" 'zsh -c "urlview < /tmp/tmux-buffer"'
 #bind-key -n M-u capturep \; saveb /tmp/tmux-buffer \; neww -n urlview "zsh -c 'BROWSER=/home/daniel/.scripts/zurl urlview  </tmp/tmux-buffer'" \;
