--- a/vim/.gitignore
+++ b/vim/.gitignore
@@ -1,4 +1,9 @@
-backups
-c-support
-u
-tmp
+autoload/getopts/
+autoload/snippets/
+backups/
+bin/
+c-support/
+c.cache
+cpp.cache
+doc/clang_complete.txt
+u/
