update vim submodule

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,56 +2,56 @@
 set -g prefix ^a
 bind-key a send-prefix
 #new-session
-set-option default-shell /bin/zsh
+#set-option default-shell /bin/zsh
 # start window indexing at one instead of zero
 set -g base-index 1
 
 # enable wm window titles
-set -g set-titles off
-setw -g mode-keys vi
-bind y paste-buffer
-bind-key -t vi-copy 'C-u' begin-selection
-bind-key -t vi-copy 'u' copy-selection
+#set -g set-titles off
+#setw -g mode-keys vi
+#bind y paste-buffer
+#bind-key -t vi-copy 'C-u' begin-selection
+#bind-key -t vi-copy 'u' copy-selection
 
 #setw -g aggressive-resize on
 # wm window title string (uses statusbar variables)
-set -g set-titles-string "tmux.#I.#W ${PWD}"
+#set -g set-titles-string "tmux.#I.#W ${PWD}"
 set -g default-terminal "screen-256color" 
-set -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
+#set -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
 
-bind b break-pane -d
-unbind %
-unbind '"'
-bind v split-window -h
-bind h split-window -v
-bind-key j command-prompt "join-pane -s %1 -h"
-set-option -g status-bg black
-set-option -g status-fg blue
-set-window-option -g window-status-current-bg black
-set-window-option -g window-status-current-fg brightgreen
-setw -g aggressive-resize on
+#bind b break-pane -d
+#unbind %
+#unbind '"'
+#bind v split-window -h
+#bind h split-window -v
+#bind-key j command-prompt "join-pane -s %1 -h"
+#set-option -g status-bg black
+#set-option -g status-fg blue
+#set-window-option -g window-status-current-bg black
+#set-window-option -g window-status-current-fg brightgreen
+#setw -g aggressive-resize on
 
 # Set window notifications
-setw -g monitor-activity on
-setw -g monitor-content ""
-set -g visual-content on
-set -g visual-activity off
-set-window-option -g window-status-activity-bg colour160
-set-window-option -g window-status-activity-fg black
-set-window-option -g status-right '#(conky -i 1 -c ~/.conky_tmux) #[fg=brightgreen]#H'
-set-window-option -g status-interval 1
-set-window-option -g status-right-bg black
-set-window-option -g status-right-fg brightgreen
-set-window-option -g status-right-length 100
-bind R source-file "$HOME/.tmux.conf" \;
-display-message "Configuration Reloaded."
+#setw -g monitor-activity on
+#setw -g monitor-content ""
+#set -g visual-content on
+#set -g visual-activity off
+#set-window-option -g window-status-activity-bg colour160
+#set-window-option -g window-status-activity-fg black
+#set-window-option -g status-right '#(conky -i 1 -c ~/.conky_tmux) #[fg=brightgreen]#H'
+#set-window-option -g status-interval 1
+#set-window-option -g status-right-bg black
+#set-window-option -g status-right-fg brightgreen
+#set-window-option -g status-right-length 100
+#bind R source-file "$HOME/.tmux.conf" \;
+#display-message "Configuration Reloaded."
 #bind enter source-file "$HOME/test.sh"
 #bind R source-file "$HOME/.tmux/reload.tmux"
-bind -n F13 next-window
-bind -n M-tab select-pane -t :.+
+#bind -n F13 next-window
+#bind -n M-tab select-pane -t :.+
 #bind -n F12 select-pane -t :.-
-bind-key m new-window -n mutt mutt
+#bind-key m new-window -n mutt mutt
 
 new -d -s0 -nzsh 'exec zsh'
 neww  -d -nrss 'exec newsbeuter'
-select-window -t1
+#select-window -t1
