--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,11 @@
 mutt/cache/*
-dwm/*
 vim/view/
 vim/vimfiles
 *.swp
-!dwm/config.h
-!dwm/config.h.bak
-!dwm/dwm.desktop
-!dwm/dwm.install
-!dwm/dwm-6.0-cycle.diff
-!dwm/myconfigh.diff
-!dwm/PKGBUILD
-omz/*.log
-omz/cache
-omz/zhistory
-!dwm/README
-!dwm/setnmaster-patch.diff
 vim/*
-!vim/colors/
-!vim/c-support/
-!vim/doc/*
-!vim/filetype.vim
-!vim/plugin/
-!vim/syntax/
-!vim/view/*
-!dwm/dwm-6.0-centred-floating.diff
-!dwm/*.diff
 *.un~
 *tags
 *netrw*
 zsh/zhistory
+zsh/.zcompdump
+zsh/completion/_systemd
